docs(api): add docs for endpoint controllers
- add models
