# models/base.go
@@ -1,0 +1,10 @@
+package models
+
+import "time"
+
+type BaseModel struct {
+	ID        uint `json:"id" gorm:"primaryKey"`
+	CreatedAt time.Time
+	UpdatedAt time.Time
+	DeletedAt time.Time `gorm:"index"`
+}
